feat: Refactor icon system and enhance Input component
Delete custom `Icon.tsx` component and migrate all icon usage across the application to `react-native-vector-icons/MaterialIcons`.

Enhance the `Input` component with new props:
*   `editable`: To control input field editability.
*   `icon` and `rightIcon`: To allow embedding icons, enabling features like password visibility toggles.

Update various screens (Login, Register, Product, Category, Stock) to utilize the new `Input` component features and `MaterialIcons`. Also, update `package.json` name for consistency.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ProductManagementAppNew",
+  "name": "product-management-app-new",
   "version": "0.0.1",
   "private": true,
   "scripts": {
